--- a/src/APP/Dockerfile
+++ b/src/APP/Dockerfile
@@ -1,15 +1,20 @@
 FROM python:3.12
 
-COPY requirements.txt .
+# Establece el directorio de trabajo en /Users/uxue/Desktop/Proyecto-ML-Obesity-Risk/src/App
+WORKDIR /Users/uxue/Desktop/Proyecto-ML-Obesity-Risk/src/App
 
+# Copia el archivo de requisitos de la aplicación al contenedor
+COPY /Users/uxue/Desktop/Proyecto-ML-Obesity-Risk/requirements.txt .
+
+# Instala las dependencias
 RUN pip install -r requirements.txt
 
-Run mkdir -p app
+# Copia el contenido actual del directorio al contenedor
+COPY . .
 
-COPY ./App app
-
-WORKDIR app
-
+# Expone el puerto 5000 en el contenedor
 EXPOSE 5000
 
+# Ejecuta la aplicación Flask cuando se inicie el contenedor
 CMD ["python3", "app.py"]
+
