--- a/src/APP/Dockerfile
+++ b/src/APP/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.12
 
 WORKDIR /Users/uxue/Desktop/Proyecto-ML-Obesity-Risk/src
 
+COPY . .
+
 RUN pip install -r requirements.txt
 
 COPY . .
